// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs snapshots renders 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 800;
  text-transform: none;
  font-style: normal;
  color: #00b3ec;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 .c3 {
  font-size: 20px;
  color: #ffffff;
}

<div
  className="c0"
>
  <a
    className="c1 c2"
    href="/applications"
    onClick={[Function]}
  >
    <span
      className="c3 c4"
      color="primary"
      size="medium"
    >
      Applications
    </span>
  </a>
</div>
`;

exports[`Breadcrumbs snapshots renders child route 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 800;
  text-transform: none;
  font-style: normal;
  color: #00b3ec;
}

.c6 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #00b3ec;
}

.c5 svg {
  fill: #ffffff !important;
  height: 32px;
  width: 32px;
}

.c5.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c5.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c5 .c3 {
  margin-left: 4px;
  color: #ffffff;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 .c3 {
  font-size: 20px;
  color: #ffffff;
}

<div
  className="c0"
>
  <a
    className="c1 c2"
    href="/applications"
    onClick={[Function]}
  >
    <span
      className="c3 c4"
      color="primary"
      size="medium"
    >
      Applications
    </span>
  </a>
  <div
    className="c0 c5"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </div>
  <a
    className="c1 c2"
    href="/kustomization?name=flux"
    onClick={[Function]}
  >
    <span
      className="c3 c6"
      color="primary"
      size="medium"
    >
      flux
    </span>
  </a>
</div>
`;

exports[`Breadcrumbs snapshots renders on the root page 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 800;
  text-transform: none;
  font-style: normal;
  color: #00b3ec;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 .c3 {
  font-size: 20px;
  color: #ffffff;
}

<div
  className="c0"
>
  <a
    className="c1 c2"
    href="/"
    onClick={[Function]}
  >
    <span
      className="c3 c4"
      color="primary"
      size="medium"
    />
  </a>
</div>
`;
